fix:navbar z-index set to 10

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -4,6 +4,7 @@
   background: #21325e;
   position: sticky;
   top: 0;
+  z-index: 10;
 }
 
 .links {
